--- a/main.css
+++ b/main.css
@@ -1,34 +1,97 @@
 
-header {
-  text-align: center;
-  justify-content: center;
-  height: 20vh;
-  color: #2D607C;
-  font-weight: bold;
+
+
+#newToDoText {
+  border-radius: 4px;
+  border: 0.5px solid #cccccc;
+  margin: 5px;
+
 }
 
-#addToDoForm {
-  text-align: center;
-  margin-top: 10px;
+label {
+  padding-top: 10px;
+  font-size: 18px;
+
+
 }
 
-button {
-  margin-left: 5px;
-  color: #000;
-  border: none;
-  border-radius: 5px;
-  background: rgba(255,255,255,0.2);
-  border-style: outset;
-  border-color: #C0C0C0;
+
+
+@media screen and (max-width: 1024px) {
+  header.mdl-layout__header {
+    display: flex;
+  }
 }
 
-button:hover {
-  background-color: #7f0000;
-  color: white;
+@media screen and (min-width: 320px) {
+  header.mdl-layout__header {
+    display: flex;
+  }
+  #newToDoText {
+    width: 120px;
+
+  }
+  label {
+    padding-top: 10px;
+    font-size: 18px;
+
+  }
+}
+@media screen and (min-width: 360px) {
+  header.mdl-layout__header {
+    display: flex;
+  }
+  #newToDoText {
+    width: 150px;
+
+  }
+  label {
+    padding-top: 10px;
+    font-size: 18px;
+
+  }
+}
+@media screen and (min-width: 375px) {
+  header.mdl-layout__header {
+    display: flex;
+  }
+  #newToDoText {
+    width: 175px;
+
+  }
+  label {
+    padding-top: 10px;
+    font-size: 18px;
+
+  }
 }
 
-#toDoList {
-  text-align: center;
-  font-size: 1em;
-  list-style-type: none;
+@media screen and (min-width: 410px) {
+  header.mdl-layout__header {
+    display: flex;
+  }
+  #newToDoText {
+    width: 200px;
+
+  }
+  label {
+    padding-top: 10px;
+    font-size: 18px;
+
+  }
+}
+
+@media screen and (min-width: 750px) {
+  header.mdl-layout__header {
+    display: flex;
+  }
+  #newToDoText {
+    width: 500px;
+
+  }
+  label {
+    padding-top: 10px;
+    font-size: 18px;
+
+  }
 }
